--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,10 +1,3 @@
-mod.industrial.name = [crimson][accent]Industrial [white]Mod[]
-mod.industrial.short = Things in [gray]Industrial Ages[]
-mod.industrial.description = My first [orange]java[] [white]Mindustry mod
-mod.codev = Co-Dev
-mod.contributors = Contributors
-mod.musics = Music
-
 
 
 
@@ -14,8 +7,6 @@ bar.fuelBurn = Fuel
 bar.craftProgress = Progress
 
 # Region Items
-wood = Wood
-stone = Stone
 ironOre = Iron Ore
 iron = Iron
 
@@ -24,7 +15,4 @@ furnace.name = Furnace
 mortar = Mortar
 
 #Region Focus
-def-first = Defensive Focus
-
-
-atk-first = Aggressive Focus
+ui.combatwidth = \uC804\uC7A5\uB108\uBE44
