--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -15,5 +15,5 @@ furnace.name = Furnace
 mortar = Mortar
 
 #Region Focus
-ui.combatwidth = \uC804\uC7A5\uB108\uBE44
+division.width = \uC804\uC7A5\uB108\uBE44
 ui.none = \uC5C6\uC74C
