--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -13,6 +13,7 @@ iron = Iron
 #Region Blocks
 furnace.name = Furnace
 mortar = Mortar
+block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 division.width = \uC804\uC7A5\uB108\uBE44
