--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,6 +1,7 @@
 
 
-
+ages.stat.unitlimit = \uC218\uC6A9\20\uAC00\uB2A5\20\uC720\uB2DB\20\uC218
+ages.stat.leastunit = \uCD5C\uC18C\20\uC720\uB2DB\20\uC218
 
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
