--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,7 +1,10 @@
+ages.stat.unitlimit = \uC218\uC6A9\ \uAC00\uB2A5 \uC720\uB2DB \uC218
+ages.stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
 
+ages.unitlimit = Can accept up to {0}[] units
+ages.leastunit = Requires at least {0}[] units to work
 
-ages.stat.unitlimit = \uC218\uC6A9\20\uAC00\uB2A5\20\uC720\uB2DB\20\uC218
-ages.stat.leastunit = \uCD5C\uC18C\20\uC720\uB2DB\20\uC218
+ages.fencedamage = Gives {0}[] damage per second to units going through the fence.
 
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
