name changes, yeet that shit, bugfix

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,8 +1,10 @@
 ages.stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
 ages.stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
 
-ages.unitlimit = Can accept up to {0}[] units
-ages.leastunit = Requires at least {0}[] units to work
+ages.unitlimit = \uCD5C\uB300 \uC720\uB2DB {0}[]\uAE30\uAE4C\uC9C0 \uC218\uC6A9 \uAC00\uB2A5
+ages.leastunit = \uC720\uB2DB \uCD5C\uC18C {0}[]\uAE30 \uD544\uC694
+
+ages.fuel = \uC5F0\uB8CC
 
 ages.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
 
