--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -12,6 +12,7 @@ ages.item.calories = calories
 
 ages.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
 
+ages.item.erwat = \uBC00
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
 bar.craftProgress = Progress
