--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,20 +1,3 @@
-ages.stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
-ages.stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
-stat.ages.mincraftheat =
-
-ages.unitlimit = \uCD5C\uB300 \uC720\uB2DB {0}[]\uAE30\uAE4C\uC9C0 \uC218\uC6A9 \uAC00\uB2A5
-ages.leastunit = \uC720\uB2DB \uCD5C\uC18C {0}[]\uAE30 \uD544\uC694
-
-ages.fuel = \uC5F0\uB8CC
-ages.heat = \uC5F4
-
-ages.item.calories = calories
-
-ages.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
-
-bar.craftHeat = Factory Heat
-bar.fuelBurn = Fuel
-bar.craftProgress = Progress
 
 # Region Items
 item.ages-erwat = \uBC00
@@ -25,3 +8,23 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 #Region Focus
 division.width = \uC804\uC7A5\uB108\uBE44
 ui.none = \uC5C6\uC74C
+
+# Region stat
+stat.phase = \uC131\uC7A5 \uB2E8\uACC4
+stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
+stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
+stat.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
+stat.fuel = \uC5F0\uB8CC
+stat.heat = \uC5F4
+stat.calories = calories
+
+# Region StatValues
+statvalue.phase = \uB2E8\uACC4
+
+# Region bar
+bar.farmprogress = \uC131\uC7A5\uB3C4
+bar.craftHeat = Factory Heat
+bar.fuelBurn = Fuel
+bar.craftProgress = Progress
+bar.unitlimit = \uCD5C\uB300 \uC720\uB2DB {0}[]\uAE30\uAE4C\uC9C0 \uC218\uC6A9 \uAC00\uB2A5
+bar.leastunit = \uC720\uB2DB \uCD5C\uC18C {0}[]\uAE30 \uD544\uC694
