--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -16,7 +16,8 @@ stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
 stat.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
 stat.fuel = \uC5F0\uB8CC
 stat.heat = \uC5F4
-stat.calories = calories
+stat.calories = \uC5D0\uB108\uC9C0
+stat.growtime = \uC131\uC7A5 \uC2DC\uAC04
 
 # Region StatValues
 statvalue.phase = \uB2E8\uACC4
