--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -10,6 +10,7 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
+focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
 focus.ages-ages.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4\uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.
 focus.ages-logging.name = \uC784\uC5C5 \uAC15\uD654
