--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -2,6 +2,8 @@ mod.ages.name = Mindustry: Ages
 mod.ages.short = Mindustry: Ages
 mod.ages.description = My first [orange]java [white]Mindustry mod
 
+#Region objectives
+requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 # Region Items
 item.ages-erwat = \uBC00
 
@@ -9,6 +11,7 @@ item.ages-erwat = \uBC00
 block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
+focus = \uc5f0\uad6c \uc911\uc810
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
