--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -4,6 +4,7 @@ mod.ages.description = My first [orange]java [white]Mindustry mod
 
 #Region objectives
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
+requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
 # Region Items
 item.ages-erwat = \uBC00
 
@@ -12,6 +13,7 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus = \uc5f0\uad6c \uc911\uc810
+focus.timeleft = \uc911\uc810 \uc644\ub8cc\uae4c\uc9c0 {0}\ucd08 / {1}\ucd08 \ub0a8\uc74c
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
