--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -13,16 +13,16 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus = \uc5f0\uad6c \uc911\uc810
-focus.timeleft = \uc911\uc810 \uc644\ub8cc\uae4c\uc9c0 {0}\ucd08 / {1}\ucd08 \ub0a8\uc74c
+focus.timeleft ={0}\ucd08
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
-focus.ages-ages.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4\uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.
-focus.ages-logging.name = \uC784\uC5C5 \uAC15\uD654
+focus.ages-ages.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4 \uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.
+focus.ages-logging.name = \uC784\uC5C5 \ud22c\uc790
 focus.ages-logging.description = \uBAA9\uC7AC\uB294 \uAC00\uC7A5 \uC57D\uD558\uBA74\uC11C\uB3C4 \uAC00\uC7A5 \uAC04\uB2E8\uD55C \uC7AC\uB8CC\uC785\uB2C8\uB2E4.
-focus.ages-mining.name = \uad11\uc5c5\uc5d0 \ud22c\uc790
+focus.ages-mining.name = \uad11\uc5c5 \ud22c\uc790
 focus.ages-mining.description = \uc554\uc11d\uc740 \uc9c0\uad6c\ub97c \uc774\ub8e8\ub294 \uac00\uc7a5 \ud754\ud55c \uac83\uc911 \ud558\ub098\uc785\ub2c8\ub2e4. \ub098\ubb34\ubcf4\ub2e4 \ub2e8\ub2e8\ud558\uc5ec \uc4f8\ub9cc\ud569\ub2c8\ub2e4.
-focus.ages-charcoal.name = \ubaa9\ud0c4 \uc81c\uc870\ubc95 \uc5f0\uad6c
+focus.ages-charcoal.name = \ubaa9\ud0c4 \uc81c\uc870
 focus.ages-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 
 division.width = \uC804\uC7A5\uB108\uBE44
