--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -13,7 +13,7 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus = \uc5f0\uad6c \uc911\uc810
-focus.timeleft ={0}\ucd08
+focus.timeleft =\uc911\uc810 \ud574\uae08 \uc2dc\uac04: {0}\ucd08
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
