--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -2,10 +2,13 @@ mod.ages.name = Mindustry: Ages
 mod.ages.short = Mindustry: Ages
 mod.ages.description = My first [orange]java [white]Mindustry mod
 
+
 #Region objectives
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
 # Region Items
+item.ages-wood = \ub098\ubb34
+item.ages-stone = \ub3cc
 item.ages-erwat = \uBC00
 
 #Region Blocks
@@ -13,7 +16,8 @@ block.ages-wooden-fence.name = \uBAA9\uCC45
 
 #Region Focus
 focus = \uc5f0\uad6c \uc911\uc810
-focus.timeleft =\uc911\uc810 \ud574\uae08 \uc2dc\uac04: {0}\ucd08
+focus.rewards = {0} {1}\uac1c
+focus.reward = \uc5f0\uad6c \ubcf4\uc0c1:
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
