Focus System Complete

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -7,9 +7,9 @@ mod.ages.description = My first [orange]java [white]Mindustry mod
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
 # Region Items
-item.ages-wood = \ub098\ubb34
-item.ages-stone = \ub3cc
-item.ages-erwat = \uBC00
+item.ages-wood.name = \ub098\ubb34
+item.ages-stone.name = \ub3cc
+item.ages-erwat.name = \uBC00
 
 #Region Blocks
 block.ages-wooden-fence.name = \uBAA9\uCC45
@@ -20,8 +20,24 @@ focus.rewards = {0} {1}\uac1c
 focus.reward = \uc5f0\uad6c \ubcf4\uc0c1:
 focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
 focus.prerequisite = \uc120\ud589 \uc911\uc810
-focus.ages-ages.name = \uC804\uBBFC\uB354\uC801 \uC5F0\uAD6C
-focus.ages-ages.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4 \uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.
+focus.additional = \ucd94\uac00 \uc7a0\uae08 \ud574\uc81c:
+focus.untilcomplete = \uc911\uc810 \uc5f0\uad6c \uc644\ub8cc\uae4c\uc9c0:
+focus.moresectors = \uc9c0\uc5ed [{2}]{0}[] / {1}\uac1c \ucd94\uac00\uc801\uc73c\ub85c \uc810\ub839
+
+#Region focuses
+focus.ages-ages.name = \uc0c8 \uc5f0\uad6c \uccb4\uacc4
+focus.ages-ages.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4 \uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.\n\n\ubaa8\ub4e0 \uc870\uac74\uc744 \ub9cc\uc871\ud558\uba74 \uc911\uc810 \uc5f0\uad6c\ub97c \uc644\ub8cc\ud558\ub294 \ub370\uc5d0\ub294 \uc2dc\uac04\uc774 \uac78\ub9bd\ub2c8\ub2e4. \ub300\uccb4\ub85c \uc9c0\uc5ed\uc774\ub098, \uc6e8\uc774\ube0c \ud074\ub9ac\uc5b4\uac00 \uadf8 \uc2dc\uac04\uc785\ub2c8\ub2e4. \uc2dc\uac04\uc744 \ub2e4 \ubcf4\ub0b8\ub2e4\uba74 \uadf8 \ud6c4\uc5d0\ub294 \uc911\uc810 \uc5f0\uad6c\uac00 \uc644\ub8cc\ub429\ub2c8\ub2e4.
+
+focus.ages-resource-i.name = \uc790\uc6d0 \uc8fc\ub825 I
+
+focus.ages-resource-ii.name = \uc790\uc6d0 \uc8fc\ub825 II
+
+focus.ages-resource-iii.name = \uc790\uc6d0 \uc8fc\ub825 III
+
+focus.ages-resource-iv.name = \uc790\uc6d0 \uc8fc\ub825 IV
+
+focus.ages-resource-v.name = \uc790\uc6d0 \uc8fc\ub825 V
+
 focus.ages-logging.name = \uC784\uC5C5 \ud22c\uc790
 focus.ages-logging.description = \uBAA9\uC7AC\uB294 \uAC00\uC7A5 \uC57D\uD558\uBA74\uC11C\uB3C4 \uAC00\uC7A5 \uAC04\uB2E8\uD55C \uC7AC\uB8CC\uC785\uB2C8\uB2E4.
 focus.ages-mining.name = \uad11\uc5c5 \ud22c\uc790
