--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -2,11 +2,13 @@ mod.ages.name = Mindustry: Ages
 mod.ages.short = Mindustry: Ages
 mod.ages.description = My first [orange]java [white]Mindustry mod
 
-
 #Region objectives
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
-# Region Items
+requirements.playing = \uc9c0\uc5ed \uc810\ub839 \uc911\uc784
+requirements.unlocked = {0} \uc5f0\uad6c \uc644\ub8cc
+
+#Region Items
 item.ages-wood.name = \ub098\ubb34
 item.ages-stone.name = \ub3cc
 item.ages-erwat.name = \uBC00
@@ -23,6 +25,7 @@ focus.prerequisite = \uc120\ud589 \uc911\uc810
 focus.additional = \ucd94\uac00 \uc7a0\uae08 \ud574\uc81c:
 focus.untilcomplete = \uc911\uc810 \uc5f0\uad6c \uc644\ub8cc\uae4c\uc9c0:
 focus.moresectors = \uc9c0\uc5ed [{2}]{0}[] / {1}\uac1c \ucd94\uac00\uc801\uc73c\ub85c \uc810\ub839
+focus.researching = \uc5f0\uad6c \uc911...
 
 #Region focuses
 focus.ages-ages.name = \uc0c8 \uc5f0\uad6c \uccb4\uacc4
@@ -45,10 +48,11 @@ focus.ages-mining.description = \uc554\uc11d\uc740 \uc9c0\uad6c\ub97c \uc774\ub8
 focus.ages-charcoal.name = \ubaa9\ud0c4 \uc81c\uc870
 focus.ages-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
 
+#Region UI
 division.width = \uC804\uC7A5\uB108\uBE44
 ui.none = \uC5C6\uC74C
 
-# Region stat
+#Region stat
 stat.phase = \uC131\uC7A5 \uB2E8\uACC4
 stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
 stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
@@ -58,10 +62,10 @@ stat.heat = \uC5F4
 stat.calories = \uC5D0\uB108\uC9C0
 stat.growtime = \uC131\uC7A5 \uC2DC\uAC04
 
-# Region StatValues
+#Region StatValues
 statvalue.phase = \uB2E8\uACC4
 
-# Region bar
+#Region bar
 bar.farmprogress = \uC131\uC7A5\uB3C4
 bar.craftHeat = Factory Heat
 bar.fuelBurn = Fuel
