porting to library

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,22 +1,10 @@
-mod.focus.name = Mindustry: Ages
-mod.focus.short = Mindustry: Ages
-mod.focus.description = My first [orange]java [white]Mindustry mod
+focus.title = \uc911\uc810 \uc2dc\uc2a4\ud15c
 
-#Region objectives
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
 requirements.playing = \uc9c0\uc5ed \uc810\ub839 \uc911\uc784
 requirements.unlocked = {0} \uc5f0\uad6c \uc644\ub8cc
 
-#Region Items
-item.focus-sinar.name = \ub098\ubb34
-item.focus-stone.name = \ub3cc
-item.focus-erwat.name = \uBC00
-
-#Region Blocks
-block.focus-wooden-fence.name = \uBAA9\uCC45
-
-#Region Focus
 focus = \uc5f0\uad6c \uc911\uc810
 focus.rewards = {0} {1}\uac1c
 focus.reward = \uc5f0\uad6c \ubcf4\uc0c1:
@@ -27,55 +15,10 @@ focus.untilcomplete = \uc911\uc810 \uc5f0\uad6c \uc644\ub8cc\uae4c\uc9c0:
 focus.moresectors = \uc9c0\uc5ed [{2}]{0}[] / {1}\uac1c \ucd94\uac00\uc801\uc73c\ub85c \uc810\ub839
 focus.researching = \uc5f0\uad6c \uc911...
 
-#Region focuses
-focus.focus-focus.name = \uc0c8 \uc5f0\uad6c \uccb4\uacc4
-focus.focus-focus.description = \uC6B0\uB9AC\uB294 \uC911\uC810\uC774\uB77C\uB294 \uC0C8\uB85C\uC6B4 \uC2DC\uC2A4\uD15C\uC744 \uC5F4\uC5C8\uC2B5\uB2C8\uB2E4. \uC5F0\uAD6C \uC2DC\uC2A4\uD15C\uC758 \uCD08\uAE30 \uB2E8\uACC4\uC774\uBA70, \uC544\uC9C1 \uBD88\uC548\uC815\uD569\uB2C8\uB2E4.\n\n\ubaa8\ub4e0 \uc870\uac74\uc744 \ub9cc\uc871\ud558\uba74 \uc911\uc810 \uc5f0\uad6c\ub97c \uc644\ub8cc\ud558\ub294 \ub370\uc5d0\ub294 \uc2dc\uac04\uc774 \uac78\ub9bd\ub2c8\ub2e4. \ub300\uccb4\ub85c \uc9c0\uc5ed\uc774\ub098, \uc6e8\uc774\ube0c \ud074\ub9ac\uc5b4\uac00 \uadf8 \uc2dc\uac04\uc785\ub2c8\ub2e4. \uc2dc\uac04\uc744 \ub2e4 \ubcf4\ub0b8\ub2e4\uba74 \uadf8 \ud6c4\uc5d0\ub294 \uc911\uc810 \uc5f0\uad6c\uac00 \uc644\ub8cc\ub429\ub2c8\ub2e4.
 
-focus.focus-resource-i.name = \uc790\uc6d0 \uc8fc\ub825 I
+# Examples
+focus-lib.focus-example.name = \uc608\uc2dc \uc911\uc810 1
+focus-lib.focus-example.description =
 
-focus.focus-resource-ii.name = \uc790\uc6d0 \uc8fc\ub825 II
-
-focus.focus-resource-iii.name = \uc790\uc6d0 \uc8fc\ub825 III
-
-focus.focus-resource-iv.name = \uc790\uc6d0 \uc8fc\ub825 IV
-
-focus.focus-resource-v.name = \uc790\uc6d0 \uc8fc\ub825 V
-
-focus.focus-logging.name = \uC784\uC5C5 \ud22c\uc790
-focus.focus-logging.description = \uBAA9\uC7AC\uB294 \uAC00\uC7A5 \uC57D\uD558\uBA74\uC11C\uB3C4 \uAC00\uC7A5 \uAC04\uB2E8\uD55C \uC7AC\uB8CC\uC785\uB2C8\uB2E4.
-focus.focus-mining.name = \uad11\uc5c5 \ud22c\uc790
-focus.focus-mining.description = \uc554\uc11d\uc740 \uc9c0\uad6c\ub97c \uc774\ub8e8\ub294 \uac00\uc7a5 \ud754\ud55c \uac83\uc911 \ud558\ub098\uc785\ub2c8\ub2e4. \ub098\ubb34\ubcf4\ub2e4 \ub2e8\ub2e8\ud558\uc5ec \uc4f8\ub9cc\ud569\ub2c8\ub2e4.
-focus.focus-charcoal.name = \ubaa9\ud0c4 \uc81c\uc870
-focus.focus-charcoal.description = \ubaa9\ud0c4\uc740 \ub098\ubb34\ub97c \uc7a5\uc2dc\uac04 \ud0dc\uc6cc \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4. \uaf64 \uc624\ub798 \uac00\uace0 \uc5f0\ub8cc\uc911\uc5d0 \uac00\uc7a5 \uc27d\uac8c \ub9cc\ub4e4 \uc218 \uc788\uc2b5\ub2c8\ub2e4.
-
-#Region UI
-division.width = \uC804\uC7A5\uB108\uBE44
-ui.none = \uC5C6\uC74C
-
-#Region stat
-stat.phase = \uC131\uC7A5 \uB2E8\uACC4
-stat.unitlimit = \uC720\uB2DB {0} / [accent]{1}\uAE30
-stat.leastunit = \uCD5C\uC18C \uC720\uB2DB \uC218
-stat.fencedamage = []\uCCB4\uB825\uC774 \uAC00\uB4DD \uCC2C \uACBD\uC6B0 \uC9C0\uB098\uAC00\uB294 \uC720\uB2DB\uC5D0\uAC8C \uCD08\uB2F9 {0} \uB300\uBBF8\uC9C0\uB97C \uC90D\uB2C8\uB2E4. \uCCB4\uB825\uC774 \uB0AE\uC544\uC9C8\uC218\uB85D \uC8FC\uB294 \uB300\uBBF8\uC9C0\uAC00 \uAC10\uC18C\uD569\uB2C8\uB2E4.
-stat.fuel = \uC5F0\uB8CC
-stat.heat = \uC5F4
-stat.calories = \uC5D0\uB108\uC9C0
-stat.growtime = \uC131\uC7A5 \uC2DC\uAC04
-
-stat.material = \uc7ac\ub8cc
-stat.lifetime = \uc5f0\uc18c \uc2dc\uac04
-stat.heatcap = \uc5f4\uc6a9\ub7c9
-
-#Region StatValues
-statvalue.phase = \uB2E8\uACC4
-
-#Region bar
-bar.farmprogress = \uC131\uC7A5\uB3C4
-bar.craftHeat = Factory Heat
-bar.fuelBurn = Fuel
-bar.craftProgress = Progress
-bar.unitlimit = \uCD5C\uB300 \uC720\uB2DB {0}[]\uAE30\uAE4C\uC9C0 \uC218\uC6A9 \uAC00\uB2A5
-bar.leastunit = \uC720\uB2DB \uCD5C\uC18C {0}[]\uAE30 \uD544\uC694
-
-#Region Content
-content.fuel.name = \uC5F0\uB8CC
+focus-lib.focus-advanced.name = \uc608\uc2dc \uc911\uc810 2
+focus-lib.focus-advanced.description =
