focus sounds kinda awkward

--- a/assets/bundles/bundle_ko.properties
+++ b/assets/bundles/bundle_ko.properties
@@ -1,24 +1,24 @@
-focus.title = \uc911\uc810 \uc2dc\uc2a4\ud15c
+quests.title = \uc911\uc810 \uc2dc\uc2a4\ud15c
 
 requirements.sectorscompleted = \uc9c0\uc5ed {0}\uac1c \uc774\uc0c1 \uc644\ub8cc
 requirements.notunlocked = \ub2e4\uc74c \uc911\uc810\uacfc \uc0c1\ud638\ubc30\ud0c0\uc801: {0}
 requirements.playing = \uc9c0\uc5ed \uc810\ub839 \uc911\uc784
 requirements.unlocked = {0} \uc5f0\uad6c \uc644\ub8cc
 
-focus = \uc5f0\uad6c \uc911\uc810
-focus.rewards = {0} {1}\uac1c
-focus.reward = \uc5f0\uad6c \ubcf4\uc0c1:
-focus.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
-focus.prerequisite = \uc120\ud589 \uc911\uc810
-focus.additional = \ucd94\uac00 \uc7a0\uae08 \ud574\uc81c:
-focus.untilcomplete = \uc911\uc810 \uc5f0\uad6c \uc644\ub8cc\uae4c\uc9c0:
-focus.moresectors = \uc9c0\uc5ed [{2}]{0}[] / {1}\uac1c \ucd94\uac00\uc801\uc73c\ub85c \uc810\ub839
-focus.researching = \uc5f0\uad6c \uc911...
+quests = \uc5f0\uad6c \uc911\uc810
+quests.rewards = {0} {1}\uac1c
+quests.reward = \uc5f0\uad6c \ubcf4\uc0c1:
+quests.nonerequired = \uC120\uD589 \uC911\uC810 \uD544\uC694 \uC5C6\uC74C.
+quests.prerequisite = \uc120\ud589 \uc911\uc810
+quests.additional = \ucd94\uac00 \uc7a0\uae08 \ud574\uc81c:
+quests.untilcomplete = \uc911\uc810 \uc5f0\uad6c \uc644\ub8cc\uae4c\uc9c0:
+quests.moresectors = \uc9c0\uc5ed [{2}]{0}[] / {1}\uac1c \ucd94\uac00\uc801\uc73c\ub85c \uc810\ub839
+quests.researching = \uc5f0\uad6c \uc911...
 
 
 # Examples
-focus-lib.focus-example.name = \uc608\uc2dc \uc911\uc810 1
-focus-lib.focus-example.description =
+quests-lib.quests-example.name = \uc608\uc2dc \uc911\uc810 1
+quests-lib.quests-example.description =
 
-focus-lib.focus-advanced.name = \uc608\uc2dc \uc911\uc810 2
-focus-lib.focus-advanced.description =
+quests-lib.quests-advanced.name = \uc608\uc2dc \uc911\uc810 2
+quests-lib.quests-advanced.description =
